test/expressions/complexOrderedCompareErrors.min.good
complexOrderedCompareErrors.chpl:21: error: min() and max() are not supported for complex arguments
